Release(v2.0.0): modular Compose stacks + Alloy-centric observability + polyglot service parity (#7)
* feat(docker): modular compose stacks + full observability wiring

* feat(services): v2 parity for envs, observability, and hardening

* docs: refresh READMEs for v2 stacks + operator workflow